--- a/psy-colors/src/index.css
+++ b/psy-colors/src/index.css
@@ -53,6 +53,27 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+.color-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  min-width:40vw;
+  min-height: 40vh;
+  gap: 2%;
+  border-radius: 20%;
+}
+.square {
+  border-radius: 8px;
+  border: 1px solid transparent;
+}
+.square:hover {
+  border-color: #646cff;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+.red-square {
+  background-color: red;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
