--- a/psy-colors/src/index.css
+++ b/psy-colors/src/index.css
@@ -53,26 +53,22 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-.color-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  min-width:40vw;
-  min-height: 40vh;
-  gap: 2%;
-  border-radius: 20%;
+.root-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.square {
-  border-radius: 8px;
-  border: 1px solid transparent;
+.color-img {
+  opacity: 0.8;
+  transition: opacity 0.25s;
+  border-radius: 2%;
 }
-.square:hover {
-  border-color: #646cff;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.color-img:hover {
+  opacity: 1.1;
 }
-.red-square {
-  background-color: red;
+.title-container {
+  margin-bottom: 20px;
 }
 
 @media (prefers-color-scheme: light) {
