--- a/psy-colors/src/pages/abstractColor/abstractColor.css
+++ b/psy-colors/src/pages/abstractColor/abstractColor.css
@@ -1,42 +1,58 @@
 .logo {
-  height: 350px;
+  height: auto;
+  width: 500px;
   padding: 1.5em;
+  flex-shrink: 0;
   will-change: filter;
   transition: filter 300ms;
+  opacity: 0.9;
+  overflow-y: scroll;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #131de3aa);
 }
-.logo-circle {
-  border-radius: 50%;
+.logo::-webkit-scrollbar { 
+  display: none; 
 }
-.shape-title {
-  margin: 0;
-  margin-bottom: 20px;
+.card-title {
+  font-size: 30px;
+  color: #000000;
 }
-.shape-description {
-  text-align: start;
-}
-.colors-container {
-  max-width: 1000px;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-.card-container {
-  display: flex;
-  align-items: center;
-  gap: 5%;
-}
-.card-image {
-  height: 555px;
+.card-p {
+  text-align: center;
+  font-size: 20px;
+  color: #000000;
 }
 .card-delimeter {
   max-width: 50px;
   width: 100%;
   height: 3px;
-  background-color: #666;
+  background-color: #ffffff;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 700px) {
+  .logo {
+    width: 300px;
+    padding: 0.5em;
+  }
+  .card-title {
+    font-size: 20px;
+    margin-top: 5px;
+  }
+  .card-p {
+    font-size: 14px;
+  }
+  .card {
+    padding-top: 0.5em;
+    overflow: hidden;
+  }
 }
