--- a/psy-colors/src/index.css
+++ b/psy-colors/src/index.css
@@ -59,18 +59,26 @@ button:focus-visible {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-y: hidden;
 }
 .color-img {
   opacity: 0.8;
   transition: opacity 0.25s;
-  border-radius: 2%;
-  border: 0.1px solid #000000;
+}
+.color-img-white {
+  opacity: 0.8;
+  transition: opacity 0.25s;
+  border: 1px solid #000000;
 }
 .color-img:hover {
   opacity: 1.1;
 }
+.color-img-white:hover {
+  opacity: 1.1;
+}
 .title-container {
   margin-bottom: 20px;
+  white-space: pre-line;
 }
 
 @media (prefers-color-scheme: light) {
